--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -12,13 +12,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.17",
     "axios": "^1.11.0",
     "expo": "~53.0.22",
-    "expo-audio": "^0.4.8",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -32,22 +30,19 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
-    "expo-video": "^2.2.2",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
@@ -55,6 +50,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "typescript": "~5.8.3"
   },
   "private": true
