--- a/fitness-app/.env
+++ b/fitness-app/.env
@@ -1,1 +1,1 @@
- EXPO_PUBLIC_RAPID_API_KEY=37f1b5db7dmshed85f7a4b6b1560p120095jsn81ceddcd8740    
+#  EXPO_PUBLIC_RAPID_API_KEY=37f1b5db7dmshed85f7a4b6b1560p120095jsn81ceddcd8740    
