--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web",
     "lint": "expo lint"
   },
+  "proxy": "https://exercisedb-api-git-main-chukwu12s-projects.vercel.app",
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -38,10 +39,12 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.3",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-video": "^6.16.1",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
